samples/_failures_safe/1761474909_2b6d09_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_561f39f8.c: In function ‘main’:
./samples/SAFE/__tmp_561f39f8.c:177:5: error: expected expression at end of input
  177 |     if (tokenizer.error_count >
      |     ^~
./samples/SAFE/__tmp_561f39f8.c:177:5: error: expected declaration or statement at end of input
